This is a commit for the changes to resolve all of the bug fixes in Sprint 7, this commit covers the criteria of JIRA-SCRUM 110,170,182,184,186,187

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -235,6 +235,7 @@ nav ul li a {
 /* Sacramento Website Title */
 .hero-text {
   position: absolute;
+  color: #222;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -246,7 +247,7 @@ nav ul li a {
 .hero-text h1 {
   font-family: 'Marcellus', serif;
   font-size: 2.5rem;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.85);
   padding: 1rem;
   border-radius: 0.5rem;
 }
@@ -285,7 +286,7 @@ h3 {
   font-family: 'Marcellus', serif;
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
-  color: #147dd3
+  color: #147dd3;
 }
 
 #GMap {
@@ -441,7 +442,16 @@ footer {
   }
 }
 
-
+/* Header for Form */
+.send-text p {
+  color: #147dd3;
+  font-size: 32px;
+  font-family: Marcellus, serif;
+  text-align: center;
+  font-weight: bold;
+  text-decoration: underline;
+  border-top: 1px solid #e5e5e5;
+}
 
 /* Consultation Area*/
 input[type="text"],
